style: working on correcting the style for the text displaying on mobile

--- a/assets/styles/index/index.css
+++ b/assets/styles/index/index.css
@@ -218,7 +218,7 @@ navbar a {
     line-height: 1em;
     margin-bottom: 0;
     opacity: 0;
-    transition: all 2.4s ease-in-out;
+    transition: opacity 2.4s ease-in-out;
 }
 
 .header_top_text {
